# Laminae

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crates.yml  publish-python.yml
crates/laminae/: Cargo.toml  README.md
crates/laminae-anthropic/: README.md
crates/laminae-cortex/: Cargo.toml
crates/laminae-cortex/src/: detector.rs  learner.rs  lib.rs  store.rs  tracker.rs
crates/laminae-glassbox/: Cargo.toml  README.md
crates/laminae-glassbox/src/: lib.rs
crates/laminae-ironclad/: Cargo.toml  README.md
crates/laminae-ironclad/src/: lib.rs
crates/laminae-ironclad/src/sandbox/: mod.rs  windows.rs
crates/laminae-ollama/: Cargo.toml  README.md
crates/laminae-openai/: README.md
crates/laminae-persona/: Cargo.toml
crates/laminae-persona/src/: dna.rs  extractor.rs  filter.rs  lib.rs  model.rs  prompt.rs
crates/laminae-psyche/: Cargo.toml  README.md
crates/laminae-python/: Cargo.toml  README.md
crates/laminae-shadow/: Cargo.toml  README.md
crates/laminae-shadow/src/: analyzer.rs  lib.rs  report.rs  sandbox.rs
crates/laminae/examples/: full_stack.rs  quickstart.rs  safe_execution.rs  shadow_audit.rs
crates/laminae/src/: lib.rs
